<resources>
    <string name="app_name">TravelFinder</string>
    <string name="text_label_1">Europe</string>
    <string name="text_label_2">Asie</string>
    <string name="text_label_3">Amérique</string>
    <string name="text_label_4">Afrique</string>
    <string name="text_label_5">Océanie</string>
    <string name="key">2395b3457eac4e6125e5567a1f1d4d23</string>
    <string name="img_desc">Landscape</string>

</resources>